yolo-project/k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-frontend
  namespace: yolo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-frontend
  template:
    metadata:
      labels:
        app: yolo-frontend
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/hostname: master
      containers:
        - name: frontend
          image: docker.io/ancious/yolo-frontend:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-frontend
  namespace: yolo-system
spec:
  type: NodePort
  selector:
    app: yolo-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
